--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <link rel="icon" type="img" href="/src/assets/img/iconLogo.png" />
+    <link rel="stylesheet" href="./src//assets/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Art</title>
   </head>
   <body>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="./src/assets/js/bootstrap.bundle.min.js" ></script>
   </body>
 </html>
