--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
     <meta charset="UTF-8" />
     <link rel="icon" type="img" href="/src/assets/img/iconLogo.png" />
     <link rel="stylesheet" href="./src//assets/css/bootstrap.min.css">
